api/swim_form/src/tests/derive/form/invalid_tag_placement_enum.stderr
error: Unrecognized attribute for 'form'.
  --> src/tests/derive/form/invalid_tag_placement_enum.rs:20:12
   |
20 |     #[form(tag = "Enumeration")]
   |            ^^^^^^^^^^^^^^^^^^^
